--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,12 @@
 			</plugin>
 		</plugins>
 	</build>
+    <distributionManagement>
+    <repository>
+        <id> deploymentRepo</id>
+        <name>admin</name>
+        <url>http://192.168.1.16:49155/repository/maven-releases/</url>
+    </repository>
+   </distributionManagement>
 
 </project>
