--- a/achat/pom.xml
+++ b/achat/pom.xml
@@ -14,8 +14,8 @@
     <name>achat</name>
     <description>Projet pour le module DevOps</description>
     <properties>
-        <java.version>1.8</java.version>
-        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+        <java.version>11.0.16.1</java.version>
+        <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -76,6 +76,11 @@
                         </exclude>
                     </excludes>
                 </configuration>
+            </plugin>
+	    <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.3.0.603</version>
             </plugin>
 
         </plugins>
