--- a/achat/pom.xml
+++ b/achat/pom.xml
@@ -83,12 +83,34 @@
                 <version>3.3.0.603</version>
             </plugin>
 
+<!--                   nexus Plugin                   -->
+			   
+	     <plugin>
+             	<artifactId>maven-deploy-plugin</artifactId>
+  		<version>2.8.1</version>
+   	        <!--    <configuration> 
+                <skip>true</skip> 
+                </configuration>  -->
+   
+	    
+	<executions>
+      		<execution>
+         		<id>default-deploy</id>
+         		<phase>deploy</phase>
+         		<goals>
+           		<goal>deploy</goal>
+        		</goals>
+       		</execution>
+   	</executions>
+	 </plugin>
+
         </plugins>
     </build>
 
+	
 	<distributionManagement>
     		<repository>
-        		<id> deploymentRepo</id>
+        		<id>deploymentRepo</id>
         		<name>admin</name>
         		<url>http://192.168.56.51:8081/repository/maven-releases/</url>
     		</repository>
