--- a/achat/Dockerfile.txt
+++ b/achat/Dockerfile.txt
@@ -1,5 +1,5 @@
 FROM openjdk:8
 
-COPY  CII/achat/target/achat-1.0.jar achat.jar
+COPY  achat-1.0.jar achat.jar
 
 ENTRYPOINT ["java","-jar","/achat.jar"]
